# OpenCVLearning

./: CMakeLists.txt  main.cpp
include/: 01Mat.hpp  0201BasicDrawing.hpp  0202BasicRandomGeneratorText.hpp  0203BasicErodingAndDilating.hpp  0203BasicSmoothImage.hpp  02ScanImage.hpp  03Mask.hpp  04matOpteration.hpp  05blendingTwoImages.hpp  06changeBrightness.hpp  07DiscreteFourierTransform.hpp  08IOXML.hpp  09Parallelize.hpp  10Vectorizing.hpp  classDemo.h  videoEdgesDetect.hpp
src/: classDemo.cpp
